[package]
name = "kylin-airdrop"
version = "0.0.1"
authors = ["Kylin Team"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac", "static-context"], optional = true }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" , default-features = false } 


[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
orml-currencies = { path = "../../pallets/orml/currencies", default-features = false }
orml-tokens = { path = "../../pallets/orml/tokens", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1",
	"libsecp256k1/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"orml-traits/std",
	"module-support/std",
]
runtime-benchmarks = [
	"libsecp256k1",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
