[package]
authors = ['Kylin <https://github.com/kylin-network>']
edition = '2018'
homepage = 'https://kylin.network'
license = 'Apache 2.0'
name = 'runtime-common'
repository = 'https://github.com/kylin-network/kylin-collator/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]

## Substrate FRAME Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
## Substrate Primitive Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'master', default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.3"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ['std']
std = [
	'frame-support/std',
	'sp-core/std',
	'sp-consensus-aura/std',
	'sp-runtime/std',
	'sp-std/std',
]
